--- a/music/templates/user/Base.html
+++ b/music/templates/user/Base.html
@@ -9,6 +9,8 @@
   <meta name="author" content="">
 
   <title>Music Dapp:Home</title>
+  
+  <script type="text/javascript" src="{{ url_for('static', filename='vendor/jquery/jquery-1.7.1.min.js') }}"></script>
 
   <!-- Custom fonts for this template-->
   <link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
@@ -23,6 +25,8 @@
     .flash          { background: #CEE5F5; padding: 0.5em;
                       border: 1px solid #AACBE2; }
     .error          { background: #F0D6D6; padding: 0.5em; }
+
+    
   </style>
   
   
@@ -155,6 +159,70 @@
   <script type="text/javascript" src="{{ url_for('static', filename= 'vendor/DataTables/js/datatables.min.js') }}"></script>
   <script src="{{ url_for('static', filename= 'vendor/DataTables/js/ellipsis.js') }}"></script>
   
+  <script>
+
+      $(function () {
+          $("#generate_transaction").click(function () {
+
+            $.ajax({
+              url: "/generate/transaction",
+              type: "POST",
+              dataType : 'json',
+              data: $('#transaction_form').serialize(),
+              success: function(response){
+
+                document.getElementById("confirmation_sender_address").value = response["transaction"]["sender_address"];
+                document.getElementById("confirmation_recipient_address").value = response["transaction"]["recipient_address"];
+                document.getElementById("confirmation_amount").value = response["transaction"]["value"];
+                document.getElementById("transaction_signature").value = response["signature"];
+
+                $("#basicModal").modal('show');
+                
+              },
+              error: function(error){
+                console.log(error);
+              }
+            });
+
+          });
+      });
+
+      $(function () {
+          $("#button_confirm_transaction").click(function () {
+            //console.log($('#confirmation_transaction_form').serialize());
+
+            $.ajax({
+              url: document.getElementById("node_url").value + "/transactions/new",
+              type: "POST",
+              headers: {'Access-Control-Allow-Origin':'*'},
+              dataType : 'json',
+              data: $('#confirmation_transaction_form').serialize(),
+              success: function(response){
+
+                //reset both forms
+                $("#transaction_form")[0].reset();
+                $("#confirmation_transaction_form")[0].reset();
+                
+                //clean text boxes
+                $("#sender_address").val("");
+                $("#sender_private_key").val("");
+                $("#recipient_address").val("");
+                $("#amount").val("");
+
+                $("#basicModal").modal('hide');
+                $("#success_transaction_modal").modal('show');
+                
+              },
+              error: function(error){
+                console.log(error);
+              }
+            });
+
+          });
+      });
+
+    </script>
+
   {% block javascript %}
   {% endblock %}
   </body>
